# cpp_lab2_task10

./: CMakeLists.txt  README.md  custom_parallel.h  main.cpp  performance_study.cpp  performance_study.h  utils.cpp  utils.h
report/: report_debug.txt  report_release.txt  Вікторія Банасевич - Програмний проєкт №2.docx
